// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorName renders with formatted value if preffered_name is not present and value is comma separated 1`] = `
<span>
  Harun Urhan
</span>
`;

exports[`AuthorName renders with native_name 1`] = `
<span>
  Harun Urhan
  <span>
     (
    赵新丽
    )
  </span>
</span>
`;

exports[`AuthorName renders with preferred_name 1`] = `
<span>
  Harun Urhan
</span>
`;

exports[`AuthorName renders with value if preffered_name is not present and value is not comma separated 1`] = `
<span>
  Urhan Harun
</span>
`;
